# homeworq

./: .gitignore  LICENSE  README.md  config.py  hq.py  pyproject.toml  ruff.toml
homeworq/: __init__.py  api.py  auth.py  cli.py  core.py  cron.py  db.py  exceptions.py  log_config.py  models.py  schemas.py  serialization.py  tasks.py  utils.py
homeworq/core/: app.py  routes.py  scheduler.py  task.py
homeworq/interfaces/: database.py  message_queue.py
homeworq/static/: scripts.js  store.js  styles.css
homeworq/static/js/: jobs.js  logs.js  notifications.js  scripts.js  store.js
homeworq/templates/: _layout.html  base.html  dashboard.html  jobs.html  login.html  results.html  tasks.html
homeworq/templates/components/: task_with_params.html
homeworq/templates/jobs/: detail.html  list.html
homeworq/templates/logs/: detail.html  list.html
homeworq/templates/results/: list.html
homeworq/templates/tasks/: list.html
