[project]
name = "homeworq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
