[project]
name = "homeworq"
version = "0.1.0"
description = "A powerful, async-first task scheduling system with an integrated REST API and web interface. Built with Python 3.13+."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "tortoise-orm>=0.23.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
hq = "homeworq.cli:app"
homeworq = "homeworq.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "pytest",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
